Trying to fix blog text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 #PostBody{
-  text-align: justify;
+  text-align: justify !important;
   padding-left: 10%;
   padding-right: 10%;
 }
@@ -16,7 +16,7 @@
 #PostDate{
   margin-bottom: -20px;
   font-size: 15px;
-  text-align: justify;
+  text-align: justify !important;
   padding-left: 10%;
   padding-right: 10%;
   font-style: italic;
